--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "fyi",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
-    "prisma:seed": "node prisma/seed.js",
+    "prisma:seed": "node prisma/seed.mjs",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
